[tool.poetry]
name = "security-guides"
version = "202409.23"
description = "For CSO guidebook in security."
authors = ["Shield of Self-Defense (ocf.tw) <ssd@ocf.tw>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
mkdocs-material = {extras = ["imaging"], version = "^9.5.36"}
watchdog = "^3.0"
boto3 = "^1.34.94"
awscli = "^1.32.94"
mkdocs-git-revision-date-localized-plugin = "^1.2.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
